Sun Jun  9 20:01:00 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>
  
	* ace/Makefile: Something is wrong with my ACE_ROOT environment variable,
	  which caused problems with the dependency generation.  This is now 
	  fixed.
  
Sun Jun  9 19:31:04 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/SOCK_Dgram_Mcast.h: Added ACE_Export to ACE_SOCK_Dgram_Mcast.
  
Sun Jun  9 18:57:07 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* examples/Reactor/Ntalker/ntalker.cpp:
	* examples/Reactor/Multicast/Log_Wrapper.cpp: Added template
	  instantiations for the new ACE_SOCK_Dgram_Mcast_Ex<> template.

Sun Jun  9 18:47:22 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* tests/Config_Test.cpp (run_tests): Added code to exercise the
	  new subkey path feature contributed by Eugene Alterman.
    
	* ace/Configuration.{h,cpp}: Added support for the path separator
	  ('\\') in key names.  Thanks to Eugene Alterman
 	  <eugalt@myrealbox.com> for contributing this patch.

	* ace/Date_Time.{h,i}: Added support for weekday.  Thanks to
	  Eyal Lubetzky <eyall@BANDWIZ.COM> for reporting this.

Sun Jun  9 18:11:02 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/SOCK_Dgram_Mcast.cpp: Removed the explicit inclusion of
	  "ace/SOCK_Dgram_Mcast_T.cpp" since this is #included appropriately
	  by SOCK_Dgram_Mcast.h.

  	* ace/SOCK_Dgram_Mcast.cpp: Removed the ';' from the end of the
	  #pragma instantiates.
  
	* ace/Makefile: Added SOCK_Dgram_Mcast_T.  

        * ace/SOCK_Dgram_Mcast_T.cpp  
          ace/SOCK_Dgram_Mcast_T.i    
          ace/SOCK_Dgram_Mcast_T.h:
	  Minor changes to conform to ACE coding conventions.
  
Sun Jun  9 17:50:37 2002  Bill Fulton  <bill_a_fulton@raytheon.com>

        * ace/SOCK_Dgram_Mcast.cpp
          ace/SOCK_Dgram_Mcast.h
          ace/SOCK_Dgram_Mcast_T.cpp  <new>
          ace/SOCK_Dgram_Mcast_T.i    <new>
          ace/SOCK_Dgram_Mcast_T.h    <new>
