@@ -965,48 +965,55 @@ ACE_OS_String::strtoul_emulation (const char *nptr,
   /*
    * See strtol for comments as to the logic used.
    */
-  do {
+  do 
     c = *s++;
-  } while (isspace(c));
-  if (c == '-') {
-    neg = 1;
-    c = *s++;
-  } else if (c == '+')
+  while (isspace(c));
+  if (c == '-') 
+    {
+      neg = 1;
+      c = *s++;
+    } 
+  else if (c == '+')
     c = *s++;
   if ((base == 0 || base == 16) &&
-    c == '0' && (*s == 'x' || *s == 'X')) {
-    c = s[1];
-    s += 2;
-    base = 16;
-  }
+      c == '0' && (*s == 'x' || *s == 'X')) 
+    {
+      c = s[1];
+      s += 2;
+      base = 16;
+    }
   if (base == 0)
     base = c == '0' ? 8 : 10;
-  cutoff = (unsigned long)ULONG_MAX / (unsigned long)base;
-  cutlim = (unsigned long)ULONG_MAX % (unsigned long)base;
-  for (acc = 0, any = 0;; c = *s++) {
-    if (isdigit(c))
-      c -= '0';
-    else if (isalpha(c))
-      c -= isupper(c) ? 'A' - 10 : 'a' - 10;
-    else
-      break;
-    if (c >= base)
-      break;
-    if (any < 0 || acc > cutoff || acc == cutoff && c > cutlim)
-      any = -1;
-    else {
-      any = 1;
-      acc *= base;
-      acc += c;
+  cutoff = (unsigned long) ULONG_MAX / (unsigned long) base;
+  cutlim = (unsigned long) ULONG_MAX % (unsigned long) base;
+
+  for (acc = 0, any = 0;; c = *s++) 
+    {
+      if (isdigit(c))
+        c -= '0';
+      else if (isalpha(c))
+        c -= isupper(c) ? 'A' - 10 : 'a' - 10;
+      else
+        break;
+      if (c >= base)
+        break;
+      if (any < 0 || acc > cutoff || acc == cutoff && c > cutlim)
+        any = -1;
+      else 
+        {
+          any = 1;
+          acc *= base;
+          acc += c;
+        }
     }
-  }
-  if (any < 0) {
-    acc = ULONG_MAX;
-    errno = ERANGE;
-  } else if (neg)
+  if (any < 0) 
+    {
+      acc = ULONG_MAX;
+      errno = ERANGE;
+    } else if (neg)
     acc = -acc;
   if (endptr != 0)
-    *endptr = any ? (char *)s - 1 : (char *)nptr;
+    *endptr = any ? (char *) s - 1 : (char *) nptr;
   return (acc);
 }
 #endif /* ACE_LACKS_STRTOUL */
@@ -1018,7 +1025,7 @@ ACE_OS_String::strsncpy (char *dst, const char *src, size_t maxlen)
   register const char *rsrc = src;
   register size_t rmaxlen = maxlen;
 
-  if (rmaxlen > 0)
+  if (rmaxlen > 0 && dst != src)
     {
       *rdst = '\0';
       if (rsrc != 0)
@@ -1034,7 +1041,7 @@ ACE_OS_String::strsncpy (ACE_WCHAR_T *dst, const ACE_WCHAR_T *src, size_t maxlen
   register const ACE_WCHAR_T *rsrc = src;
   register size_t rmaxlen = maxlen;
 
-  if (rmaxlen > 0)
+  if (rmaxlen > 0 && dst != src)
     {
       *rdst = ACE_TEXT_WIDE ('\0');
       if (rsrc != 0)
